replaces corona-based listener

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "vent",
-  "version": "0.2.0",
-  "main": "vent.lua"
+  "version": "0.3.0",
+  "main": "vent.lua",
+  "ignore": ["test.lua", "mockTimer.lua"]
 }
